feat: group update view, remove migrations, clients groups many to many, control with 2 listboxes

--- a/Travel-Company.WPF/App.xaml
+++ b/Travel-Company.WPF/App.xaml
@@ -17,6 +17,8 @@
                 <ResourceDictionary Source="Resources/Templates/Buttons/Control/CloseButton.xaml"/>
                 <ResourceDictionary Source="Resources/Templates/Buttons/Control/MinimizeButton.xaml"/>
                 <ResourceDictionary Source="Resources/Templates/Buttons/General/LogInButton.xaml"/>
+                <ResourceDictionary Source="Resources/Templates/Buttons/General/MoveItemToLeftButton.xaml"/>
+                <ResourceDictionary Source="Resources/Templates/Buttons/General/MoveItemToRightButton.xaml"/>
                 <ResourceDictionary Source="Resources/Templates/RadioButtons/MainMenuButton.xaml"/>
                 
             </ResourceDictionary.MergedDictionaries>
