--- a/Travel-Company.WPF/Resources/Components/PenaltyForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/PenaltyForm.xaml
@@ -37,7 +37,7 @@
                 
                 <TextBlock Text="Date"
                            Style="{StaticResource ComponentTitle}" />
-                <DatePicker SelectedDate="{Binding Penalty.CompensationDateTime, Mode=TwoWay}"
+                <DatePicker SelectedDate="{Binding Penalty.CompensationDate, Mode=TwoWay}"
                             DisplayDateStart="1/1/1900"
                             DisplayDateEnd="{x:Static sys:DateTime.Today}"
                             Margin="-2 0 0 10"
