--- a/Travel-Company.WPF/Resources/Templates/Views.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Views.xaml
@@ -7,11 +7,13 @@
                     xmlns:catalogsView="clr-namespace:Travel_Company.WPF.MVVM.View.Catalogs"
                     xmlns:penaltiesView="clr-namespace:Travel_Company.WPF.MVVM.View.Penalties"
                     xmlns:groupsView="clr-namespace:Travel_Company.WPF.MVVM.View.Groups"
+                    xmlns:routesView="clr-namespace:Travel_Company.WPF.MVVM.View.Routes"
                     xmlns:employeesVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
                     xmlns:clientsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients"
                     xmlns:catalogsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Catalogs"
                     xmlns:penaltiesVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Penalties"
-                    xmlns:groupsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Groups">
+                    xmlns:groupsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Groups"
+                    xmlns:routessVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Routes">
     <DataTemplate DataType="{x:Type TypeName=viewModels:LoginViewModel}">
         <views:LoginView />
     </DataTemplate>
@@ -64,5 +66,9 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type TypeName=groupsVm:GroupsUpdateViewModel}">
         <groupsView:GroupsUpdateView />
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type TypeName=routessVm:RoutesViewModel}">
+        <routesView:RoutesView />
     </DataTemplate>
 </ResourceDictionary>
