--- a/Travel-Company.WPF/Resources/Components/CatalogItemForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/CatalogItemForm.xaml
@@ -11,6 +11,8 @@
     <UserControl.Resources>
         <DiscreteObjectKeyFrame x:Key="IsClassElementVisibleKeyFrame"
                                 Value="{Binding IsClassElementVisible}" />
+        <DiscreteObjectKeyFrame x:Key="IsCountryNameElementVisibleKeyFrame"
+                                Value="{Binding IsCountryNameElementVisible}" />
     </UserControl.Resources>
 
     <Grid Margin="15">
@@ -41,7 +43,17 @@
                                  Text="{Binding CatalogItem.Class, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
                 </StackPanel>
-                
+
+                <StackPanel x:Name="StackPanelCountryElement"
+                            Visibility="{Binding Value, Source={StaticResource IsCountryNameElementVisibleKeyFrame}}">
+                    <TextBlock Text="Country"
+                               Style="{StaticResource ComponentTitle}" />
+                    <ComboBox ItemsSource="{Binding Countries}"
+                              SelectedItem="{Binding CatalogItem.Country}"
+                              DisplayMemberPath="Name"
+                              Margin="0 0 0 10" />
+                </StackPanel>
+
 
                 <!-- Buttons -->
                 <DockPanel>
