--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -34,6 +34,45 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled"
+                     Value="False">
+                <Setter Property="Background"
+                        Value="{StaticResource Grey7Brush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="DataGridCommandButton"
+           TargetType="{x:Type Button}">
+        <Setter Property="Background"
+                Value="{StaticResource Primary4Brush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource WhiteBrush}" />
+        <Setter Property="BorderBrush"
+                Value="{StaticResource Primary6Brush}" />
+        <Setter Property="FontSize"
+                Value="13" />
+        <Setter Property="Height"
+                Value="26" />
+        <Setter Property="Focusable"
+                Value="False" />
+        <Setter Property="Cursor"
+                Value="Hand" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="2"
+                            CornerRadius="6"
+                            Padding="10 0 10 0">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="FireRemoveButton"
@@ -76,18 +115,26 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border Background="{StaticResource WhiteBrush}"
-                            BorderBrush="Transparent"
-                            BorderThickness="0"
-                            CornerRadius="6"
-                            Padding="4 0"
-                            Height="36">
+                    <Border Background="{TemplateBinding Background}" 
+                        BorderBrush="Transparent"
+                        BorderThickness="0"
+                        CornerRadius="6"
+                        Padding="4 0"
+                        Height="36">
                         <ScrollViewer x:Name="PART_ContentHost"
                                       Margin="6" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsEnabled"
+                     Value="False">
+                <Setter Property="Background"
+                        Value="{StaticResource Grey10Brush}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="{x:Type PasswordBox}">
@@ -1023,7 +1070,13 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        
         <Style.Triggers>
+            <Trigger Property="IsEnabled"
+                     Value="False">
+                <Setter Property="Background"
+                        Value="{StaticResource Grey10Brush}" />
+            </Trigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="theComboBoxItem"
