--- a/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
@@ -33,10 +33,12 @@
             <DockPanel Margin="5">
                 <Button Content="Add"
                         Margin="0 0 15 0"
-                        Command="{Binding NavigateToEmployeesInsertCommand}" />
+                        Command="{Binding NavigateToEmployeesInsertCommand}"
+                        Style="{StaticResource CommandButton}" />
                 <Button Content="Edit"
                         Margin="0 0 15 0"
-                        Command="{Binding NavigateToEmployeesUpdateCommand}" />
+                        Command="{Binding NavigateToEmployeesUpdateCommand}"
+                        Style="{StaticResource CommandButton}" />
                 <Button Content="Fire"
                         HorizontalAlignment="Left"
                         Command="{Binding FireSelectedEmployeeCommand}"
