--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -9,7 +9,7 @@
     <!--#region Controls -->
     <Style TargetType="{x:Type Button}">
         <Setter Property="Background"
-                Value="{StaticResource Primary5Brush}" />
+                Value="{StaticResource Primary3Brush}" />
         <Setter Property="Foreground"
                 Value="{StaticResource WhiteBrush}" />
         <Setter Property="FontSize"
@@ -43,7 +43,7 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="DataGridCommandButton"
+    <Style x:Key="CommandButton"
            TargetType="{x:Type Button}">
         <Setter Property="Background"
                 Value="{StaticResource Primary4Brush}" />
@@ -66,7 +66,7 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="2"
                             CornerRadius="6"
-                            Padding="10 0 10 0">
+                            Padding="8 0 8 2">
                         <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center" />
                     </Border>
@@ -76,17 +76,18 @@
     </Style>
 
     <Style x:Key="FireRemoveButton"
+           BasedOn="{StaticResource CommandButton}"
            TargetType="{x:Type Button}">
         <Setter Property="Background"
                 Value="Transparent" />
         <Setter Property="Foreground"
                 Value="{StaticResource RedLightBrush}" />
         <Setter Property="FontSize"
-                Value="14" />
+                Value="13" />
         <Setter Property="FontWeight"
                 Value="Bold" />
         <Setter Property="Height"
-                Value="36" />
+                Value="26" />
         <Setter Property="Focusable"
                 Value="False" />
         <Setter Property="Cursor"
@@ -98,7 +99,7 @@
                             BorderBrush="{StaticResource RedLightBrush}"
                             BorderThickness="2"
                             CornerRadius="6"
-                            Padding="13 0 13 0">
+                            Padding="8 0 8 2">
                         <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center" />
                     </Border>
@@ -415,7 +416,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="DataGrid">
-                            <TextBlock Text="No data found" 
+                            <TextBlock Text="No records"
                                        FontSize="16"
                                        Margin="20"
                                        VerticalAlignment="Stretch" 
