--- a/Travel-Company.WPF/Resources/Components/Password.xaml
+++ b/Travel-Company.WPF/Resources/Components/Password.xaml
@@ -4,6 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.Resources.Components"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -13,7 +17,8 @@
                      FontSize="12"
                      MaxLength="16" 
                      PasswordChanged="ComponentPassword_PasswordChanged" />
-        <TextBlock x:Name="Placeholder"
+        <TextBlock x:Name="PasswordTextBlockPlaceholder"
+                   Text="{lex:Loc}"
                    VerticalAlignment="Center"
                    Margin="12"
                    Foreground="{StaticResource Grey5Brush}"
