--- a/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
@@ -7,6 +7,10 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:catalogs="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Catalogs"
              d:DataContext="{d:DesignInstance Type=catalogs:CatalogsViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -26,27 +30,27 @@
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Catalog"
+                   Text="{lex:Loc Catalog}"
                    Style="{StaticResource PageHeader}" />
 
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar Placeholder="Search" />
+            <component:SearchBar Placeholder="{lex:Loc SearchBarDefaultPlaceholder}" />
         </Grid>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="2">
             <DockPanel Margin="5">
-                <Button Content="Add"
+                <Button Content="{lex:Loc ButtonAdd}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToInsertingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Edit"
+                <Button Content="{lex:Loc ButtonEdit}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToUpdatingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Delete"
+                <Button Content="{lex:Loc ButtonDelete}"
                         HorizontalAlignment="Left"
                         Command="{Binding DeleteSelectedItemCommand}"
                         Style="{StaticResource FireRemoveButton}" />
@@ -73,7 +77,7 @@
                           SelectedItem="{Binding SelectedCatalogItem}">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Name"
+                        <DataGridTemplateColumn Header="{lex:Loc CatalogName}"
                                                 IsReadOnly="True"
                                                 Width="*">
                             <DataGridTemplateColumn.CellTemplate>
@@ -91,12 +95,12 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTextColumn Header="Class"
+                        <DataGridTextColumn Header="{lex:Loc CatalogClass}"
                                             IsReadOnly="True"
                                             Width="*"
                                             Binding="{Binding Path=Class}"
                                             Visibility="{Binding Value, Source={StaticResource IsClassColumnVisibleKeyFrame}}" />
-                        <DataGridTextColumn Header="Country"
+                        <DataGridTextColumn Header="{lex:Loc CatalogCountry}"
                                             IsReadOnly="True"
                                             Width="*"
                                             Binding="{Binding Path=Country.Name}"
