--- a/Travel-Company.WPF/MVVM/View/Clients/ClientsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Clients/ClientsView.xaml
@@ -7,6 +7,10 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:clients="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients"
              d:DataContext="{d:DesignInstance Type=clients:ClientsViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -23,32 +27,32 @@
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Clients"
+                   Text="{lex:Loc Clients}"
                    Style="{StaticResource PageHeader}" />
 
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar Placeholder="Search" />
+            <component:SearchBar Placeholder="{lex:Loc SearchBarDefaultPlaceholder}" />
         </Grid>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="2">
             <DockPanel Margin="5">
-                <Button Content="Add"
+                <Button Content="{lex:Loc ButtonAdd}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToInsertingCommand}"
                         Style="{StaticResource CommandButton}"/>
-                <Button Content="Edit"
+                <Button Content="{lex:Loc ButtonEdit}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToUpdatingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Delete"
+                <Button Content="{lex:Loc ButtonDelete}"
                         HorizontalAlignment="Left"
                         Margin="0 0 15 0"
                         Command="{Binding DeleteSelectedItemCommand}"
                         Style="{StaticResource FireRemoveButton}"/>
-                <Button Content="Penalties"
+                <Button Content="{lex:Loc ButtonPenalties}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToPenaltiesCommand}"
                         Style="{StaticResource CommandButton}" />
@@ -79,7 +83,7 @@
                           HorizontalScrollBarVisibility="Visible">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Full name"
+                        <DataGridTemplateColumn Header="{lex:Loc FullName}"
                                                 IsReadOnly="True"
                                                 Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -99,33 +103,33 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTextColumn Header="Street"
+                        <DataGridTextColumn Header="{lex:Loc Street}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Street.Name}" />
-                        <DataGridTextColumn Header="Birthdate"
+                        <DataGridTextColumn Header="{lex:Loc Birthdate}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Birthdate, StringFormat=dd/MM/yyyy}" />
-                        <DataGridTextColumn Header="Groups"
+                        <DataGridTextColumn Header="{lex:Loc Groups}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=TouristGroups.Count}" />
-                        <DataGridTextColumn Header="Penalties"
+                        <DataGridTextColumn Header="{lex:Loc Penalties}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Penalties.Count}" />
-                        <DataGridTextColumn Header="Passport"
+                        <DataGridTextColumn Header="{lex:Loc Passport}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Passport}"
                                             Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
-                        <DataGridTextColumn Header="Issue date"
+                        <DataGridTextColumn Header="{lex:Loc IssueDate}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=PassportIssueDate, StringFormat=dd/MM/yyyy}"
                                             Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
-                        <DataGridTextColumn Header="Authority"
+                        <DataGridTextColumn Header="{lex:Loc Authority}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=PassportIssuingAuthority}"
