--- a/Travel-Company.WPF/Resources/Components/ClientForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/ClientForm.xaml
@@ -8,6 +8,10 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:clients="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients"
              d:DataContext="{d:DesignInstance Type=clients:ClientsUpdateViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
              d:DesignHeight="1000" d:DesignWidth="600">
     <UserControl.Resources>
@@ -33,32 +37,32 @@
 
                 <!-- Inputs -->
                 <StackPanel Margin="1 0 5 0">
-                    <TextBlock Text="First name"
+                    <TextBlock Text="{lex:Loc FirstName}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="First name"
+                    <local:Input ComponentName="{lex:Loc FirstName}"
                                  Text="{Binding Client.FirstName, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                    <TextBlock Text="Last name"
+                    <TextBlock Text="{lex:Loc LastName}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="Last name"
+                    <local:Input ComponentName="{lex:Loc LastName}"
                                  Text="{Binding Client.LastName, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                    <TextBlock Text="Patronymic"
+                    <TextBlock Text="{lex:Loc Patronymic}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="Patronymic"
+                    <local:Input ComponentName="{lex:Loc Patronymic}"
                                  Text="{Binding Client.Patronymic, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                    <TextBlock Text="Street"
+                    <TextBlock Text="{lex:Loc Street}"
                                Style="{StaticResource ComponentTitle}" />
                     <ComboBox ItemsSource="{Binding Streets}"
                               SelectedItem="{Binding Client.Street}"
                               DisplayMemberPath="Name"
                               Margin="0 0 0 10" />
 
-                    <TextBlock Text="Birthdate"
+                    <TextBlock Text="{lex:Loc Birthdate}"
                                Style="{StaticResource ComponentTitle}" />
                     <DatePicker SelectedDate="{Binding Client.Birthdate, Mode=TwoWay}"
                                 DisplayDateStart="1/1/1900"
@@ -66,26 +70,26 @@
                                 Margin="-2 0 0 10"
                                 VerticalContentAlignment="Center" />
 
-                    <TextBlock Text="Tourist group"
+                    <!--<TextBlock Text="{lex:Loc TouristGroup}"
                                Style="{StaticResource ComponentTitle}" />
                     <ComboBox ItemsSource="{Binding Groups}"
-                              SelectedItem="{Binding Client.TouristGroup}"
+                              SelectedItem="{Binding Client.TouristGroups[0]}"
                               DisplayMemberPath="Name"
-                              Margin="0 0 0 10" />
+                              Margin="0 0 0 10" />-->
 
-                    <TextBlock Text="Passport series"
+                    <TextBlock Text="{lex:Loc PassportSeries}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="Passport series"
+                    <local:Input ComponentName="{lex:Loc PassportSeries}"
                                  Text="{Binding Client.PassportSeries, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                    <TextBlock Text="Passport number"
+                    <TextBlock Text="{lex:Loc PassportNumber}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="Passport number"
+                    <local:Input ComponentName="{lex:Loc PassportNumber}"
                                  Text="{Binding Client.PassportNumber, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                    <TextBlock Text="Passport issue date"
+                    <TextBlock Text="{lex:Loc IssueDate}"
                                Style="{StaticResource ComponentTitle}" />
                     <DatePicker SelectedDate="{Binding Client.PassportIssueDate, Mode=TwoWay}"
                                 DisplayDateStart="1/1/1900"
@@ -93,9 +97,9 @@
                                 Margin="-2 0 0 10"
                                 VerticalContentAlignment="Center" />
 
-                    <TextBlock Text="Passport issuing authority"
+                    <TextBlock Text="{lex:Loc Authority}"
                                Style="{StaticResource ComponentTitle}" />
-                    <local:Input ComponentName="Passport issuing authority"
+                    <local:Input ComponentName="{lex:Loc Authority}"
                                  Text="{Binding Client.PassportIssuingAuthority, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
@@ -105,7 +109,7 @@
                                 Margin="0 0 15 0"
                                 Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ClientForm}}, Path=RelayCommand}" />
                         <Button x:Name="ButtonCancel"
-                                Content="Cancel"
+                                Content="{lex:Loc ButtonCancel}"
                                 Margin="0 0 15 0"
                                 HorizontalAlignment="Left"
                                 Command="{Binding CancelCommand}" />
@@ -116,7 +120,8 @@
                 <StackPanel Grid.Column="1"
                             Margin="15 25 10 10"
                             Width="180">
-                    <Image x:Name="clientImage">
+                    <Image x:Name="clientImage"
+                           Margin="0 0 0 5">
                         <Image.Style>
                             <Style TargetType="{x:Type Image}">
                                 <Setter Property="Source"
@@ -131,12 +136,12 @@
                             </Style>
                         </Image.Style>
                     </Image>
-                    <Button Content="Change picture"
+                    <Button Content="{lex:Loc ButtonChangePicture}"
                             Margin="0 10"
                             HorizontalAlignment="Center"
                             Command="{Binding ChangeProfilePictureCommand}"
                             Style="{StaticResource CommandButton}" />
-                    <Button Content="Remove picture"
+                    <Button Content="{lex:Loc ButtonRemovePicture}"
                             HorizontalAlignment="Center"
                             Command="{Binding RemoveProfilePictureCommand}"
                             Style="{StaticResource FireRemoveButton}" />
