--- a/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
@@ -7,8 +7,12 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="800">
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -22,32 +26,32 @@
                       Grid.Row="1">
             <StackPanel Margin="1 0 5 0">
                 <!-- Inputs -->
-                <TextBlock Text="First name" 
+                <TextBlock Text="{lex:Loc FirstName}" 
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="First name"
+                <local:Input ComponentName="{lex:Loc FirstName}"
                              Text="{Binding Employee.FirstName, Mode=TwoWay}"
                              Margin="0 0 0 10" />
 
-                <TextBlock Text="Last name"
+                <TextBlock Text="{lex:Loc LastName}"
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="Last name"
+                <local:Input ComponentName="{lex:Loc LastName}"
                              Text="{Binding Employee.LastName, Mode=TwoWay}"
                              Margin="0 0 0 10" />
 
-                <TextBlock Text="Patronymic"
+                <TextBlock Text="{lex:Loc Patronymic}"
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="Patronymic"
+                <local:Input ComponentName="{lex:Loc Patronymic}"
                              Text="{Binding Employee.Patronymic, Mode=TwoWay}"
                              Margin="0 0 0 10" />
 
-                <TextBlock Text="Street"
+                <TextBlock Text="{lex:Loc Street}"
                            Style="{StaticResource ComponentTitle}" />
                 <ComboBox ItemsSource="{Binding Streets}"
                           SelectedItem="{Binding Employee.Street}"
                           DisplayMemberPath="Name"
                           Margin="0 0 0 10" />
 
-                <TextBlock Text="Birthdate"
+                <TextBlock Text="{lex:Loc Birthdate}"
                            Style="{StaticResource ComponentTitle}" />
                 <DatePicker SelectedDate="{Binding Employee.Birthdate, Mode=TwoWay}"
                             DisplayDateStart="1/1/1900"
@@ -55,9 +59,9 @@
                             Margin="-2 0 0 10"
                             VerticalContentAlignment="Center" />
 
-                <TextBlock Text="Salary"
+                <TextBlock Text="{lex:Loc Salary}"
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="Salary"
+                <local:Input ComponentName="{lex:Loc Salary}"
                              Text="{Binding Employee.Salary, Mode=TwoWay}"
                              Margin="0 0 0 10" />
 
@@ -67,7 +71,7 @@
                             Margin="0 0 15 0"
                             Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:EmployeeForm}}, Path=RelayCommand}" />
                     <Button x:Name="ButtonCancel"
-                            Content="Cancel"
+                            Content="{lex:Loc ButtonCancel}"
                             Margin="0 0 15 0"
                             HorizontalAlignment="Left"
                             Command="{Binding CancelCommand}"/>
